package com.example.happyhabitapp;

public interface HabitListener {
    void onHabitClick(int position);
}
